# src/configs/swagger.json
@@ -280,31 +280,6 @@
         }
       }
     },
-    "/tokens/{id}": {
-      "delete": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Delete Token",
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
     "/brands/": {
       "get": {
         "tags": [
@@ -1026,8 +1001,8 @@
         "tags": [
           "Sales"
         ],
-        "summary": "List Sale",
-        "description": "",
+        "summary": "List Sales",
+        "description": "\r  You can use <u>filter[] & search[] & sort[] & page & limit</u> queries with endpoint.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=asc&sort[field2]=desc</b></li>\r   <li>URL/?<b>limit=10&page=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -1044,37 +1019,15 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "userId": {
-                  "example": "any"
-                },
-                "productId": {
-                  "example": "any"
-                },
-                "quantity": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Sale"
             }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "202": {
-            "description": "Accepted"
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
@@ -1116,25 +1069,15 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "quantity": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Sale"
             }
           }
         ],
         "responses": {
-          "202": {
-            "description": "Accepted"
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
+          "200": {
+            "description": "OK"
           }
         }
       },
@@ -1177,25 +1120,15 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "quantity": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Sale"
             }
           }
         ],
         "responses": {
-          "202": {
-            "description": "Accepted"
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
+          "200": {
+            "description": "OK"
           }
         }
       }
